--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <body class="container-fluid">
             <header>
                 <i class="fa-solid fa-gear fa-2xl" style="color: #ffffff;"></i>
-                <h1>Undeviating</h1>
+                <h1>Undeviatinggg</h1>
                 <nav>
                     <ul>
                         <li><a class="active nounderline" href="index.html">homepage</a></li>
